<resources>
    <string name="app_name">ForCov E</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="comenzar">Comenzar</string>
    <string name="acepto">Acepto</string>
    <string name="no_acepto">No Acepto</string>
    <string name="politica">Acepta la política de privacidad de datos. Ver política</string>
    <string name="experiencia">Lee detenidamente los términos y condiciones para el tratamiento de tus datos personales y autentícate con tu cuenta de Google para acceder al uso de ForCov E.</string>
    <string name="registrate_con_google">Regístrate con Google</string>
    <string name="cerrar">Cerrar</string>
    <string name="clic_en_el_logo_de_google_para_registrarte">Clic en el logo de Google para registrarte</string>
    <string name="enviar_reporte">Enviar Reporte</string>
    <string name="no_de_identificaci_n">No. de identificación</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="pregunta_1">1. ¿Tiene fiebre o la ha tenido en los últimos 14 días?, esto es una temperatura mayor o igual a 38ºC</string>
    <string name="pregunta_2">2. ¿Tiene o ha tenido en los Ultimas 14 días dificultad respiratoria o algún otro síntoma respiratorio como tos, secreción nasal, pérdida del olfato?</string>
    <string name="pregunta_3">3. ¿Tiene o ha tenido en los últimos 14 días diarrea u otras molestias digestivas?</string>
    <string name="pregunta_4">4. ¿Tiene o ha tenido sensación de mucho cansancio o malestar en los últimas 14 días?</string>
    <string name="pregunta_5">5. ¿Ha notado una pérdida del sentido del gusto o del olfato en los últimos 14 días?</string>
    <string name="pregunta_6">6. ¿Ha estado en contacto o conviviendo con alguna persona sospechosa o confirmada de coronavirus por COVID-19?</string>
    <string name="pregunta_7">7. En caso de haber presentado infección por COVID-19, ¿sigue usted en aislamiento?</string>
    <string name="tu_respuesta">No</string>
    <string name="completar">Ya he completado el formulario:</string>
    <string name="ok">Ok</string>
    <string name="tus_reportes">Tus Reportes</string>
    <string name="_1">1</string>
    <string name="riesgo">Riesgo</string>
    <string name="respuesta_7">Respuesta 7</string>
    <string name="respuesta_6">Respuesta 6</string>
    <string name="respuesta_5">Respuesta 5</string>
    <string name="respuesta_4">Respuesta 4</string>
    <string name="respuesta_3">Respuesta 3</string>
    <string name="respuesta_2">Respuesta 2</string>
    <string name="respuesta_1">Respuesta 1</string>
    <string name="usuario">Usuario</string>
    <string name="fecha_y_hora_del_reporte">Fecha y hora del reporte</string>
    <string name="presiona">Presiona nuevamente para salir</string>
    <string name="leer_c_digo_qr_del_reporte">Leer código QR del reporte</string>
    <string name="eroor_google">Error autenticando con Google</string>
    <string name="debes_registro">Debes registrarte para usar ForCov E</string>
    <string name="responsable">Si eres responsable de la lectura de los códigos QR presentados por los estudiantes, ten presente que si el nivel de riesgo es igual o mayor a 2 de 7 o el reporte se hizo en un tiempo superior a 24 horas antes, no se debe permitir el ingreso a la sede.</string>
    <string name="mis_reportes">Mis Reportes</string>
    <string name="pqrs">PQRS</string>
    <string name="leer_c_digo_qr">Leer código QR</string>
    <string name="men">Menú</string>
    <string name="info">Ayuda</string>
    <string name="info_app">ForCov E fue creado para facilitar el reporte de los estados de salud de los estudiantes de Frupo Formarte a nivel nacional.</string>
    <string name="mensaje">\"Estas a punto de enviar un reporte a nombre de: \"</string>
    <string name="correo_de">\", con el correo electrónico: \"</string>
    <string name="ingresa_id">Debes ingresar tu numero de documento</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="mis_datos">Mis datos</string>
    <string name="digita_tu_n_mero_de_documento_para_guardarlo">Digita tu número de documento para guardarlo</string>
    <string name="guardar">Guardar</string>
    <string name="id">y el número de documento: </string>
    <string name="actualmente_sus_datos_guardados_son_los_siguientes">Actualmente tu ID es:</string>
    <string name="sin_datos">Sin datos</string>
    <string name="grupo_guardado">Grupo Guardado</string>
    <string name="inscrito">\" y el ID:\"</string>
    <string name="inserta_id">Inserta tu ID</string>
    <string name="recorre">Recorre las cuatro instrucciones para saber cómo usar la App</string>
    <string name="hola">Hola!</string>
    <string name="comparte_forcov_e">Comparte ForCov E</string>
    <string name="escr_benos">Escríbenos</string>
    <string name="recibe_soporte">Recibe soporte</string>
    <string name="calif_canos">Califícanos</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="salir_sin_cerrar_sesi_n">Salir sin cerrar sesión</string>
    <string name="acerca_de_forcov_e">Acerca de ForCov E</string>
    <string name="tu_mensaje">Tu Mensaje</string>
    <string name="d_janos_tu_mensaje">Déjanos tu mensaje</string>
    <string name="el_mensaje_que_env_as_est_acompa_ado_del_email_de_tu_cuenta_y_tu_nombre_de_usuario">El mensaje que envías está acompañado del email de tu cuenta y tu nombre de usuario.</string>
    <string name="limpiar">Limpiar</string>
    <string name="enviar">Enviar</string>
    <string name="despription">ForCov E es un aplicativo diseñado para dar respuesta a las necesidades de cumplimiento legal relacionadas con la pandemia por COVID-19, específicamente para el reporte de estados de salud de los estudiantes (Resolución 1721 de 2020), sirviendo de canal para la conexión de posibles casos de COVID tanto en la población trabajadora como educativa. ID: Android Studio 4.1.1. Versión del SDK de compilación: 30. Lenguaje de programación: Kotlin. Conexión de datos, soporte, Auth, Cloud FireStore, Cloud Inappmessaging, Remoteconfig y Analytics por Firebase de Google. BuildToolsVersion 30.0.3. Diseño y desarrollo: Ramiro Abad Gómez.</string>
    <string name="mensaje_enviado">Tu mensaje ha sido enviado con éxito</string>
    <string name="para_nosotros_es_muy_importante_tu_calificaci_n">Para nosotros es muy importante tu calificación</string>
    <string name="cancelar">Cancelar</string>
    <string name="cerrar_dialogo">Estás a punto de cerrar tu sesión. ¿Qué deseas hacer?</string>
    <string name="versi_n">Versión</string>
    <string name="version_actual">1.0</string>
    <string name="powered_by">Powered by</string>
    <string name="cumple_los_protocolos_de_bioseguridad">Cumple los protocolos de bioseguridad</string>
    <string name="falta_mensaje">Falta tu mensaje</string>
    <string name="id_de_usuario">ID de usuario</string>
    <string name="email_de_registro">Email de registro</string>
    <string name="proveedor_de_autenticaci_n">Proveedor de autenticación</string>
    <string name="datos_de_la_cuenta">Datos de la Cuenta</string>
    <string name="gracias">Gracias por tu calificación</string>
    <string name="error">Ha ocurrido un error, vuelve a intentarlo.</string>
    <string name="error_dos">Ha ocurrido un error, inténtalo nuevamente</string>
</resources>