<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".ui.AuthActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_forcov_e_dos" />

    <TextView
        android:id="@+id/tv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/coda"
        android:gravity="center"
        android:text="@string/experiencia"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/contrato2"
        android:layout_width="match_parent"
        android:fontFamily="@font/coda"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_main"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="end"
        android:padding="4dp"
        android:text="@string/politica"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contrato2"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:gravity="end"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/deAcuerdo"
            android:buttonTint="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/coda"
            android:textColor="@color/black"
            android:text="@string/acepto" />

        <RadioButton
            android:id="@+id/desAcuerdo"
            android:layout_width="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:text="@string/no_acepto" />


    </RadioGroup>



    <TextView
        android:id="@+id/resgistro"
        android:layout_width="match_parent"
        android:fontFamily="@font/coda"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:visibility="invisible"
        android:padding="4dp"
        android:text="@string/clic_en_el_logo_de_google_para_registrarte"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resgistro"
        android:clickable="false"
        android:layout_centerHorizontal="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

</RelativeLayout>