<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/cerrar_contactos"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/cerrar"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/coda"
        android:gravity="center"
        android:text="@string/d_janos_tu_mensaje"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        android:layout_margin="8dp"
        android:layout_marginTop="25dp"
        app:counterMaxLength="300"
        app:counterEnabled="true"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tu_mensaje"
            android:inputType="text"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <io.armcha.elasticview.ElasticView
        android:id="@+id/button_enviar"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:foregroundGravity="center"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="5dp"
        app:flexibility="10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/coda"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/enviar"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


    </io.armcha.elasticview.ElasticView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/coda"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/el_mensaje_que_env_as_est_acompa_ado_del_email_de_tu_cuenta_y_tu_nombre_de_usuario"/>

</LinearLayout>