<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/cerrar_calificacion"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/coda"
        android:gravity="center"
        android:text="@string/cerrar"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold" />


    <ImageView
        android:layout_margin="16dp"
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo_forcov_e_dos"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/coda"
        android:gravity="center"
        android:text="@string/para_nosotros_es_muy_importante_tu_calificaci_n"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:progressTint="@color/colorPrimaryDark"/>


    <io.armcha.elasticview.ElasticView
        android:id="@+id/bt_calificanos"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:foregroundGravity="center"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="16dp"
        app:flexibility="10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/coda"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/calif_canos"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


    </io.armcha.elasticview.ElasticView>


</LinearLayout>