<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".application.ReportActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/coda"
                    android:gravity="center"
                    android:textColor="@color/black"
                    tools:text="Datos por medio de los cuales se envían los reportes" />


                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/respuesta1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:checked="false"
                    android:fontFamily="@font/coda"
                    android:text="@string/pregunta_1"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/respuesta2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:checked="false"
                    android:fontFamily="@font/coda"
                    android:text="@string/pregunta_2"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/respuesta3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:checked="false"
                    android:fontFamily="@font/coda"
                    android:text="@string/pregunta_3"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/respuesta4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:checked="false"
                    android:fontFamily="@font/coda"
                    android:text="@string/pregunta_4"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/respuesta5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:checked="false"
                    android:fontFamily="@font/coda"
                    android:text="@string/pregunta_5"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/respuesta6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:checked="false"
                    android:fontFamily="@font/coda"
                    android:text="@string/pregunta_6"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/respuesta7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:checked="false"
                    android:fontFamily="@font/coda"
                    android:text="@string/pregunta_7"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/respuestas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:checked="false"
                    android:fontFamily="@font/coda"
                    android:text="@string/completar"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <io.armcha.elasticview.ElasticView
                    android:id="@+id/btnEnviarView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:flexibility="10">

                    <TextView
                        android:id="@+id/btnSend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/coda"
                        android:padding="12dp"
                        android:text="@string/enviar_reporte"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </io.armcha.elasticview.ElasticView>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>